updated code.. need the api fixed

--- a/index.html
+++ b/index.html
@@ -55,19 +55,19 @@
                         <form>
                             <div class='form-group'>
                                 <label for="">Train Name</label>
-                                <input type="text" class="form control" name="trainNameInput">
+                                <input type="text" class="form control" id="trainNameInput">
                             </div>
                             <div class='form-group'>
                                 <label for="">Destination</label>
-                                <input type="text" class="form control" name="destinationInput">
+                                <input type="text" class="form control" id="destinationInput">
                             </div>
                             <div class='form-group'>
                                 <label for="">First Train Time (HH:mm - Military Time)</label>
-                                <input type="text" class="form control" name="firstTrainInput">
+                                <input type="text" class="form control" id="firstTrainInput">
                             </div>
                             <div class='form-group'>
                                 <label for="">Frequency (Min)</label>
-                                <input type="text" class="form control" name="frequencyInput">
+                                <input type="text" class="form control" id="frequencyInput">
                             </div>
                             <button type="submit" class="btn btn-primary" id="addTrainBtn">Submit!</button>
                         </form>
@@ -76,6 +76,6 @@
             </div>
 
      </div>
-        <script src="" async defer></script>
+        <script src="logic.js"></script>
     </body>
 </html>
