--- a/index.html
+++ b/index.html
@@ -10,9 +10,19 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <!-- jquery bootstrap -->
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="./assets.js/css/style.css">
+        <link rel="stylesheet" href="./assets/css/reset.css">
         <!-- <link rel="stylesheet" href="./assets.js/css/reset.css"> -->
-        <link rel="stylesheet" href="assets.js/logic.js">
+        <link rel="stylesheet" href="./assets/css/style.css">
+
+
+        <!-- The core Firebase JS SDK is always required and must be listed first -->
+        <script src="https://www.gstatic.com/firebasejs/7.6.2/firebase.js"></script>
+
+        <!-- TODO: Add SDKs for Firebase products that you want to use
+          https://firebase.google.com/docs/web/setup#available-libraries -->
+        <script src="https://www.gstatic.com/firebasejs/7.6.2/firebase-analytics.js"></script>
+
+
     </head>
     <body>
      <div class="container">
@@ -76,6 +86,11 @@
             </div>
 
      </div>
-        <script src="logic.js"></script>
+      <!-- Moment.js Reference -->
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
+      <!-- moment-duration-format plugin -->
+      <script
+          src="https://cdnjs.cloudflare.com/ajax/libs/moment-duration-format/1.3.0/moment-duration-format.min.js"></script>
+        <script src="./assets/logic.js"></script>
     </body>
 </html>
